Started adding start of pipelines

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,10 @@
 [general]
 fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_samplesheet.py
+
+[nextflow]
+custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
+rnaseq = /apps/bio/repos/nf-core/nf-core-rnaseq-3.7/workflow/main.nf
+rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
+profile = singularity,byss
+genome = GRCh38
+dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
