Start of pipes in parallel. Also test-run is possible

--- a/config.ini
+++ b/config.ini
@@ -8,3 +8,4 @@ rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 profile = singularity,byss
 genome = GRCh38
 dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
+test_outdir = /home/xlinak/inbox/qd-wrapper-test
