Added test profile

--- a/config.ini
+++ b/config.ini
@@ -6,8 +6,9 @@ custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
 rnaseq = /apps/bio/repos/nf-core/nf-core-rnaseq-3.7/workflow/main.nf
 rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 profile = singularity,byss,qd_rnaseq
+test_profile = singularity,byss,test
 genome = GRCh38
-dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
+dependencies_fusion = /apps/bio/dependencies/nf-core
 test_outdir = /home/xlinak/inbox/qd-wrapper-test
 
 [rnaseq-references]
