Fixed location of rnafusion dependencies

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 profile = singularity,byss,qd_rnaseq
 test_profile = singularity,byss,test
 genome = GRCh38
-dependencies_fusion = /apps/bio/dependencies/nf-core
+dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
 test_outdir = /home/xlinak/inbox/qd-wrapper-test
 
 [rnaseq-references]
