Separated rnaseq and rnafusion config

--- a/config.ini
+++ b/config.ini
@@ -3,13 +3,19 @@ fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_sampleshe
 
 [nextflow]
 custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
-rnaseq = /apps/bio/repos/nf-core/nf-core-rnaseq-3.8.1/workflow/main.nf
-rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 profile = singularity,byss,qd_rnaseq
 test_profile = singularity,byss,test
-genome = GRCh38
+
+[rnafusion]
+rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
+#rnafusion = /home/xlinak/repos/rnafusion/main.nf
 dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
-test_outdir = /home/xlinak/inbox/qd-wrapper-test
+fusionreport_tool_cutoff = 1
+
+[rnaseq]
+main = /apps/bio/repos/nf-core/nf-core-rnaseq-3.8.1/workflow/main.nf
+genome = GRCh38
+aligner = star_rsem
 
 [rnaseq-references]
 fasta = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa
