Corrected config inputs to rnaseq

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ profile = singularity,byss,qd_rnaseq
 test_profile = singularity,byss,test
 
 [rnafusion]
-rnafusion = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
+main = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 #rnafusion = /home/xlinak/repos/rnafusion/main.nf
 dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
 fusionreport_tool_cutoff = 1
@@ -20,5 +20,5 @@ aligner = star_rsem
 [rnaseq-references]
 fasta = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa
 gtf = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf
-bed = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed
+gene_bed = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed
 star_index = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/
