--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_samplesheet.py
 
 [nextflow]
-custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
+#custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
 profile = singularity,byss,qd_rnaseq
 test_profile = singularity,byss,test
 
