--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [general]
 fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_samplesheet.py
+output_dir = /medstore/results/clinical/qd-rnaseq
+wrapper_log_dir = /medstore/logs/pipeline_logfiles/qd-rnaseq
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
