Config setup for what data to send as results

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_samplesheet.py
 output_dir = /medstore/results/clinical/qd-rnaseq
 wrapper_log_dir = /medstore/logs/pipeline_logfiles/qd-rnaseq
+report_dir = /seqstore/webfolders/wgs/rnaseq
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
@@ -24,3 +25,19 @@ fasta = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Sequenc
 gtf = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf
 gene_bed = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed
 star_index = /apps/bio/dependencies/nf-core/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/
+
+[report-rnafusion]
+arriba = *.tsv
+arriba_visualisation = *.pdf
+fusioncatcher = *.txt
+fusioninspector = *
+fusionreport = */*.html
+pizzly = *
+squid = *.txt
+starfusion = *.tsv
+
+[report-rnaseq]
+multiqc = */multiqc_report.html
+stringtie = *.gtf,*.txt,*.ballgown/*
+star_rsem = *.results,*.tsv
+star_salmon = *.tsv
