Read length from config

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ main = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
 #rnafusion = /home/xlinak/repos/rnafusion/main.nf
 dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
 fusionreport_tool_cutoff = 1
+readlength = 150
 
 [rnaseq]
 main = /apps/bio/repos/nf-core/nf-core-rnaseq-3.8.1/workflow/main.nf
