Added igv report dir and extended what files to report

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ fastq_to_ss_path = /apps/bio/dependencies/nf-core/scripts/fastq_dir_to_sampleshe
 output_dir = /medstore/results/clinical/qd-rnaseq
 wrapper_log_dir = /medstore/logs/pipeline_logfiles/qd-rnaseq
 report_dir = /seqstore/webfolders/wgs/rnaseq
+igv_dir = /seqstore/webfolders/igv/data/rnaseq_test
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
@@ -41,5 +42,5 @@ starfusion = *.tsv
 [report-rnaseq]
 multiqc = */multiqc_report.html
 stringtie = *.gtf,*.txt,*.ballgown/*
-star_rsem = *.results,*.tsv
-star_salmon = *.tsv
+star_rsem = *.results,*.tsv,*.bam,*.bai,bigWig/*.bigWig
+star_salmon = *.tsv,*.bam,*.bai,bigWig/*.bigWig
