Generates samplesheet from SLIMS information

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,7 @@ output_dir = /medstore/results/clinical/qd-rnaseq
 wrapper_log_dir = /medstore/logs/pipeline_logfiles/qd-rnaseq
 report_dir = /seqstore/webfolders/wgs/rnaseq
 igv_dir = /seqstore/webfolders/igv/data/rnaseq_test
+strandedness = reverse
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
