Updated to more closely resemble the institute one

--- a/config.ini
+++ b/config.ini
@@ -10,13 +10,13 @@ strandedness = reverse
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
-profile = singularity,byss,qd_rnaseq
-test_profile = singularity,byss,test
+profile = singularity,production,qd_rnaseq
+test_profile = singularity,production,test
 
 [rnafusion]
-main = /apps/bio/repos/nf-core/nf-core-rnafusion-2.0.0/workflow/main.nf
+main = /apps/bio/repos/nf-core/nf-core-rnafusion-2.1.0/workflow/main.nf
 #rnafusion = /home/xlinak/repos/rnafusion/main.nf
-dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.0.0
+dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.1.0
 fusionreport_tool_cutoff = 1
 readlength = 150
 
