--- a/qd-wrapper_nextflow.config
+++ b/qd-wrapper_nextflow.config
@@ -1,50 +1,39 @@
 //Profile config names for nf-core/configs
 params {
   config_profile_description = 'Cluster profile for medair (local cluster of Clinical Genomics Gothenburg)'
-  config_profile_contact = 'Clinical Genomics, Gothenburg'
-  config_profile_url = 'https://www.scilifelab.se/units/clinical-genomics-goteborg/'
+  config_profile_contact     = 'Clinical Genomics, Gothenburg'
+  config_profile_url         = 'https://www.scilifelab.se/units/clinical-genomics-goteborg/'
 }
 
 //Nextflow parameters
 singularity {
-    enabled = true
+    enabled  = true
+    cacheDir = "/apps/bio/dependencies/nf-core/singularities"
 }
 
 profiles {
-  
-  clinic {
+
+  wgs {
     process {
-      queue = 'wgs.q'
-      executor = 'sge'
-      penv = 'mpi'
+      queue                  = 'wgs.q'
+      executor               = 'sge'
+      penv                   = 'mpi'
       process.clusterOptions = '-l excl=1'
-      params.max_cpus = 40
-      params.max_time = 48.h
-      params.max_memory = 128.GB
+      params.max_cpus        = 40
+      params.max_time        = 48.h
+      params.max_memory      = 128.GB
     }
   }
 
-  research {
+  production {
     process {
-      queue = 'batch.q'
-      executor = 'sge'
-      penv = 'mpi'
+      queue                  = 'production.q'
+      executor               = 'sge'
+      penv                   = 'mpi'
       process.clusterOptions = '-l excl=1'
-      params.max_cpus = 40
-      params.max_time = 480.h
-      params.max_memory = 128.GB
-    }
-  }
-
-  byss {
-    process {
-      queue = 'test.q'
-      executor = 'sge'
-      penv = 'mpi'
-      process.clusterOptions = '-l excl=1'
-      params.max_cpus = 40
-      params.max_time = 480.h
-      params.max_memory = 128.GB
+      params.max_cpus        = 40
+      params.max_time        = 480.h
+      params.max_memory      = 128.GB
     }
   }
 
@@ -76,6 +65,11 @@ profiles {
      withLabel:process_long {
        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
        }
+     withName: FUSIONCATCHER {
+       cpus   = { check_max( 40    * task.attempt, 'cpus'    ) }
+       memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
+       time   = { check_max( 24.h  * task.attempt, 'time'    ) }
+    }
     }
   }
 
