Max parallel pipes for wrapper and offse in time per instance launch

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,8 @@ igv_dir = /seqstore/webfolders/igv/data/rnaseq_test
 previously_analysed = /medstore/status-checks/qd-rnaseq-wrapper/previously_analysed.txt
 temp_dir = /tmp/qd-rnaseq
 strandedness = reverse
+max_processes = 10
+time_offset = 120
 
 [nextflow]
 #custom_config = /apps/bio/repos/nf-core-configs/conf/medair.config
