Manually set arriba references

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,9 @@ main = /apps/bio/repos/nf-core/nf-core-rnafusion-2.1.0/workflow/main.nf
 dependencies_fusion = /apps/bio/dependencies/nf-core/nf-core-rnafusion-2.1.0
 fusionreport_tool_cutoff = 1
 readlength = 150
+dependencies_arriba_ref = /home/xdemer/data/deps/arriba/
+dependencies_arriba_ref_blacklist = /home/xdemer/data/deps/arriba/blacklist_hg38_GRCh38_v2.3.0.tsv.gz
+dependencies_arriba_ref_protein_domain = /home/xdemer/data/deps/arriba/protein_domains_hg38_GRCh38_v2.3.0.gff3
 
 [rnaseq]
 main = /apps/bio/repos/nf-core/nf-core-rnaseq-3.8.1/workflow/main.nf
